--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,21 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Roboto+Slab");
+* {
+  margin: 0;
+  padding: 0; }
+
 header {
   display: flex;
   justify-content: space-around;
   align-items: center;
   align-content: space-between;
   flex-wrap: wrap;
-  min-height: 360px; }
+  min-height: 360px;
+  border: 2px solid gold; }
   header .eye {
-    font-size: 32px;
+    font-size: 24px;
     font-family: "Roboto Slab", serif;
     margin-bottom: 0; }
     header .eye a {
       text-decoration: none;
       color: #80542F; }
       header .eye a:hover {
-        border-bottom: 2px solid #80542F;
-        color: rgba(128, 84, 47, 0.8); }
+        color: rgba(209, 188, 138, 0.8);
+        background: #80542F; }
   header .hero {
     display: flex;
     flex-wrap: wrap;
@@ -48,15 +53,16 @@ header {
 main.index {
   display: flex;
   flex-wrap: wrap;
-  max-width: 960px;
+  max-width: 90%;
   align-self: center; }
   @media screen and (min-width: 960px) {
     main.index .note {
       width: 45%; } }
   main.index .note p {
     font-family: "Roboto Slab", serif;
-    font-size: 30px;
-    padding: 10px 30px; }
+    font-size: 20px;
+    padding: 10px 30px;
+    text-align: justify; }
   @media screen and (min-width: 960px) {
     main.index .mini-gallery {
       width: 45%; } }
@@ -77,35 +83,36 @@ main.index {
   display: inline-block;
   font-family: "Roboto Slab", serif;
   font-size: 24px;
-  margin-right: 15px;
   position: relative; }
   .menu-top ul li:hover > .submenu {
     visibility: visible; }
   .menu-top ul li a {
     text-decoration: none;
-    color: #80542F; }
+    color: #80542F;
+    padding: 3px 8px; }
     .menu-top ul li a:hover {
-      border-bottom: 2px solid #80542F;
-      color: rgba(128, 84, 47, 0.8); }
+      color: rgba(209, 188, 138, 0.8);
+      background: #80542F; }
 
 .menu-top .submenu {
   position: absolute;
   visibility: hidden;
-  background: yellow;
+  background: #D1BC8A;
   width: auto;
   padding: 3px; }
   .menu-top .submenu li {
     margin: 0; }
 
 .active {
-  font-size: 30px; }
+  border: 0.5px solid #80542F; }
 
 footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #80542F;
-  color: #D1BC8A; }
+  color: #D1BC8A;
+  padding: 25px 15px; }
   footer nav.menu-bottom ul {
     list-style: none;
     padding: 0; }
@@ -114,7 +121,8 @@ footer {
       font-size: 80%; }
       footer nav.menu-bottom ul li a {
         text-decoration: none;
-        color: #D1BC8A; }
+        color: #D1BC8A;
+        font-size: 15px; }
     footer nav.menu-bottom ul .submenu {
       display: none; }
   footer .social ul {
@@ -126,16 +134,23 @@ footer {
       width: 67px;
       margin-right: 15px; }
       footer .social ul li:nth-child(1) {
-        background: url("/assets/images/icons/youtube.svg"); }
+        background-color: #D1BC8A;
+        -webkit-mask: url("/assets/images/icons/youtube.svg"); }
       footer .social ul li:nth-child(2) {
-        background: url("/assets/images/icons/facebook.svg"); }
+        background-color: #D1BC8A;
+        -webkit-mask: url("/assets/images/icons/facebook.svg"); }
       footer .social ul li:nth-child(3) {
-        background: url("/assets/images/icons/twitter.svg"); }
+        background-color: #D1BC8A;
+        -webkit-mask: url("/assets/images/icons/twitter.svg"); }
       footer .social ul li:nth-child(4) {
-        background: url("/assets/images/icons/google.svg"); }
+        background-color: #D1BC8A;
+        -webkit-mask: url("/assets/images/icons/google.svg"); }
       footer .social ul li a {
         display: block;
         height: 100%; }
+  footer .logo {
+    font-size: 20px;
+    font-family: "Roboto Slab", serif; }
 
 html {
   background: #D1BC8A;
