--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -285,6 +285,28 @@ div.badeye div.w-b button {
   height: 74px;
   cursor: pointer; }
 
+.test-header {
+  margin: 0 auto;
+  text-align: center; }
+
+.choise {
+  margin: 10px 35px;
+  border: 2px solid #80542F;
+  border-radius: 8px; }
+
+.radio_pair li {
+  list-style: none;
+  padding: 10px 5px; }
+
+.answer {
+  margin: 10px auto;
+  text-align: center; }
+
+.you-are {
+  margin: 15px 0px 15px 0px;
+  font-size: x-large;
+  min-height: 30px; }
+
 html {
   background: #D1BC8A;
   box-sizing: border-box;
