--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -66,6 +66,9 @@ main {
     font-size: 20px;
     padding: 10px 30px;
     text-align: justify; }
+  main .note .timer {
+    width: 100%;
+    height: 50px; }
   main .mini-gallery {
     /* @media screen and (min-width: 960px) {
             width: 45%;
