--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -56,11 +56,11 @@ header {
 main {
   display: flex;
   flex-wrap: wrap;
-  max-width: 90%;
-  align-self: center; }
+  align-self: center;
+  max-width: 90%; }
   @media screen and (min-width: 960px) {
     main .note {
-      width: 45%; } }
+      width: 44%; } }
   main .note p {
     font-family: "Roboto Slab", serif;
     font-size: 20px;
@@ -69,43 +69,40 @@ main {
   main .note .timer {
     width: 100%;
     height: 50px; }
-  main .mini-gallery {
-    /* @media screen and (min-width: 960px) {
-            width: 45%;
-        }*/ }
-    main .mini-gallery ul {
-      margin: 0;
-      padding: 0;
-      column-count: 3;
-      column-gap: 0; }
-    main .mini-gallery li {
-      list-style: none;
-      line-height: 0; }
-    main .mini-gallery img {
-      width: 100%;
-      height: 130px;
-      object-fit: cover; }
-
-.back_colorbox {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 9;
-  display: none; }
-
-.big_img_colorbox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  display: none;
-  z-index: 10; }
+  @media screen and (min-width: 960px) {
+    main section.pict {
+      width: 44%; } }
+  main section.pict .mini-gallery ul {
+    margin: 0;
+    padding: 0;
+    column-count: 3;
+    column-gap: 0; }
+  main section.pict .mini-gallery li {
+    list-style: none;
+    line-height: 0; }
+  main section.pict .mini-gallery img {
+    width: 100%;
+    height: 130px;
+    object-fit: cover; }
+  main .back_colorbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 9;
+    display: none; }
+  main .big_img_colorbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    display: none;
+    z-index: 10; }
 
 .menu-top ul li {
   display: inline-block;
