--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -116,7 +116,8 @@ main {
   .menu-top ul li a {
     text-decoration: none;
     color: #80542F;
-    padding: 3px 8px; }
+    padding: 3px 8px;
+    transition: 0.5s all ease; }
     .menu-top ul li a:hover {
       color: rgba(209, 188, 138, 0.8);
       background: #80542F; }
@@ -125,14 +126,19 @@ main {
   position: absolute;
   visibility: hidden;
   background: #D1BC8A;
-  width: auto;
   padding: 3px; }
   @media screen and (max-width: 1100px) {
     .menu-top .submenu {
       display: none; } }
   .menu-top .submenu li {
-    margin: 0;
-    font-size: 18px; }
+    font-size: 18px;
+    width: 100%; }
+
+.menu-top .submenu li > a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 5px 1px; }
 
 .active {
   border: 0.5px solid #80542F; }
