--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -138,7 +138,8 @@ main {
   display: block;
   width: 100%;
   height: 100%;
-  padding: 5px 1px; }
+  padding: 5px 1px;
+  transition: 0s; }
 
 .active {
   border: 0.5px solid #80542F; }
