--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -121,6 +121,25 @@ main {
     .menu-top ul li a:hover {
       color: rgba(209, 188, 138, 0.8);
       background: #80542F; }
+  .menu-top ul li .sand_button {
+    width: 32px;
+    height: 32px;
+    background: url("/assets/images/sand_menu.png") no-repeat center/cover;
+    display: none; }
+  @media screen and (max-width: 525px) {
+    .menu-top ul li {
+      width: 100%;
+      display: block;
+      border-bottom: 2px solid #80542F;
+      visibility: hidden; }
+      .menu-top ul li a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        padding: 5px 1px;
+        transition: 0s; }
+      .menu-top ul li .sand_button {
+        display: block; } }
 
 .menu-top .submenu {
   position: absolute;
@@ -376,7 +395,7 @@ main.info {
   }*/ }
   main.info .side_menu {
     width: 25%;
-    margin-bottom: 10px; }
+    margin-bottom: 50px; }
     main.info .side_menu .submenu li {
       margin: 5px 3px;
       padding: 5px 3px;
@@ -395,7 +414,22 @@ main.info {
     width: 74%;
     border: 1px solid #80542F;
     /*box-shadow: 0 0 8px rgba(4, 4, 4, .6);*/
-    margin-bottom: 10px; }
+    /*margin-bottom: 10px;*/
+    height: auto; }
+    main.info .palindrom #dopal {
+      display: inline-block;
+      width: 170px;
+      height: 45px;
+      padding: 3px;
+      font-size: 20px; }
+    main.info .palindrom #pal {
+      height: 35px;
+      font-size: 20px; }
+    main.info .palindrom #palend {
+      height: 35px;
+      font-size: 20px; }
+    main.info .palindrom .answer {
+      margin-bottom: 50px; }
   @media screen and (max-width: 650px) {
     main.info .palindrom {
       width: 100%; }
@@ -410,6 +444,36 @@ main.info {
       width: 100%; }
     main.info html {
       -webkit-text-size-adjust: none; } }
+
+main.gallery {
+  width: 98%;
+  margin: 15px auto;
+  /*@media screen and (min-width: 600px){
+    column-count: 2;
+    column-gap: 5px;
+  }
+
+
+  @media screen and (min-width: 800px){
+    column-count: 3;
+    column-gap: 5px;
+  }*/ }
+  main.gallery .grid-sizer,
+  main.gallery .grid-item {
+    width: 32%; }
+    @media screen and (max-width: 800px) {
+      main.gallery .grid-sizer,
+      main.gallery .grid-item {
+        width: 49.5%; } }
+    @media screen and (max-width: 400px) {
+      main.gallery .grid-sizer,
+      main.gallery .grid-item {
+        width: 98%; } }
+  main.gallery .grid-item {
+    float: left;
+    margin-bottom: 5px; }
+  main.gallery img {
+    width: 100%; }
 
 html {
   background: #D1BC8A;
