--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -374,77 +374,142 @@ main.tags {
   main.tags div {
     margin: 10px auto; }
 
-h1 {
-  padding: 10px 50%;
-  width: 100%;
-  height: 5%; }
-
 main.info {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 90%;
-  /*@media screen and (min-width: 980px) {
-    .palindrom {
-      width: 100%;
-    }
-
-    .side_menu {
-      width: 100%;
-    }
-  }*/ }
-  main.info .side_menu {
-    width: 25%;
-    margin-bottom: 50px; }
-    main.info .side_menu .submenu li {
-      margin: 5px 3px;
-      padding: 5px 3px;
+  margin: 0 auto;
+  width: 97%;
+  max-width: 960px; }
+  @media screen and (min-width: 600px) {
+    main.info {
+      display: flex;
+      flex-wrap: nowrap;
+      margin: 0 auto; }
+      main.info aside.info_title {
+        flex: 1 0 20%; }
+      main.info section.info_content {
+        margin-left: 10px;
+        width: 80%; }
+        main.info section.info_content .content_item {
+          display: none; }
+          main.info section.info_content .content_item img {
+            width: 100%; }
+          main.info section.info_content .content_item .doc-list a {
+            display: inline-block;
+            list-style: none;
+            padding: 6px 10px;
+            text-decoration: none;
+            border: 1px solid #80542F;
+            width: 100%;
+            color: #80542F; } }
+  main.info aside.info_title {
+    background: #80542F; }
+    main.info aside.info_title ul li {
+      color: #D1BC8A;
       list-style: none;
-      border: 1px solid #80542F;
-      box-shadow: 0 0 4px rgba(4, 4, 4, 0.6); }
-    main.info .side_menu .submenu :first-child {
-      margin-top: 0; }
-    main.info .side_menu .submenu li a {
-      color: #80542F;
       display: inline-block;
-      text-decoration: none;
-      height: 100%;
-      width: 100%; }
-  main.info .palindrom {
-    width: 74%;
-    border: 1px solid #80542F;
-    /*box-shadow: 0 0 8px rgba(4, 4, 4, .6);*/
-    /*margin-bottom: 10px;*/
-    height: auto; }
-    main.info .palindrom #dopal {
-      display: inline-block;
-      width: 170px;
-      height: 45px;
-      padding: 3px;
-      font-size: 20px; }
-    main.info .palindrom #pal {
-      height: 35px;
-      font-size: 20px; }
-    main.info .palindrom #palend {
-      height: 35px;
-      font-size: 20px; }
-    main.info .palindrom .answer {
-      margin-bottom: 50px; }
-  @media screen and (max-width: 650px) {
-    main.info .palindrom {
-      width: 100%; }
-    main.info .side_menu {
-      width: 100%; }
-    main.info .submenu li {
-      float: left; } }
-  @media screen and (max-width: 480px) {
-    main.info .palindrom {
-      width: 100%; }
-    main.info .side_menu {
-      width: 100%; }
-    main.info html {
-      -webkit-text-size-adjust: none; } }
+      float: left;
+      margin-left: 3px;
+      padding: 6px 10px;
+      cursor: pointer; }
+      main.info aside.info_title ul li:hover {
+        color: #c3a765; }
+      @media screen and (min-width: 600px) {
+        main.info aside.info_title ul li {
+          display: block; } }
 
+/*
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+width: 90%;
+
+         .side_menu {
+           width: 25%;
+           margin-bottom: 50px;
+
+           .submenu li {
+             margin: 5px 3px;
+             padding: 5px 3px;
+             list-style: none;
+             border: 1px solid $brown;
+             box-shadow: 0 0 4px rgba(4, 4, 4, .6);
+           }
+           .submenu :first-child {
+             margin-top: 0;
+           }
+
+           .submenu li a {
+             color: $brown;
+             display: inline-block;
+             text-decoration: none;
+             height: 100%;
+             width: 100%;
+           }
+         }
+
+.palindrom {
+  width: 74%;
+  border: 1px solid $brown;
+  !*box-shadow: 0 0 8px rgba(4, 4, 4, .6);*!
+  !*margin-bottom: 10px;*!
+  height: auto;
+
+  #dopal {
+    display: inline-block;
+    width: 170px;
+    height: 45px;
+    padding: 3px;
+    font-size: 20px;
+  }
+
+  #pal{
+    height: 35px;
+    font-size: 20px;
+  }
+  #palend{
+    height: 35px;
+    font-size: 20px;
+  }
+  .answer{
+    margin-bottom: 50px;
+  }
+}
+
+!*@media screen and (min-width: 980px) {
+  .palindrom {
+    width: 100%;
+  }
+
+  .side_menu {
+    width: 100%;
+  }
+}*!
+
+@media screen and (max-width: 650px) {
+  .palindrom {
+    width: 100%;
+  }
+
+  .side_menu {
+    width: 100%;
+  }
+  .submenu li {
+    float: left;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .palindrom {
+    width: 100%;
+  }
+
+  .side_menu {
+    width: 100%;
+  }
+
+  html {
+    -webkit-text-size-adjust: none;
+  }
+}*/
 main.gallery {
   width: 98%;
   margin: 15px auto;
@@ -473,7 +538,11 @@ main.gallery {
     float: left;
     margin-bottom: 5px; }
   main.gallery img {
-    width: 100%; }
+    width: 100%;
+    border: 10px solid #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 4px rgba(4, 4, 4, 0.5);
+    margin-left: 5px; }
 
 html {
   background: #D1BC8A;
