--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -106,11 +106,21 @@ main {
   display: none;
   z-index: 10; }
 
+@media screen and (max-width: 525px) {
+  .slider {
+    display: none; } }
+
 .menu-top ul li {
   display: inline-block;
   font-family: "Roboto Slab", serif;
   font-size: 24px;
-  position: relative; }
+  position: relative;
+  /*.sand_button{
+      width: 32px;
+      height: 32px;
+      background: url("/assets/images/sand_menu.png") no-repeat center/cover;
+      display: none;
+    }*/ }
   .menu-top ul li:hover > .submenu {
     visibility: visible; }
   .menu-top ul li a {
@@ -121,25 +131,25 @@ main {
     .menu-top ul li a:hover {
       color: rgba(209, 188, 138, 0.8);
       background: #80542F; }
-  .menu-top ul li .sand_button {
-    width: 32px;
-    height: 32px;
-    background: url("/assets/images/sand_menu.png") no-repeat center/cover;
-    display: none; }
-  @media screen and (max-width: 525px) {
-    .menu-top ul li {
-      width: 100%;
-      display: block;
-      border-bottom: 2px solid #80542F;
-      visibility: hidden; }
-      .menu-top ul li a {
+
+@media screen and (max-width: 525px) {
+  .menu-top {
+    width: 100%;
+    display: none;
+    transition: all 1s;
+    margin-top: 80px; }
+    .menu-top ul {
+      padding: 0; }
+      .menu-top ul li {
         display: block;
-        width: 100%;
-        height: 100%;
-        padding: 5px 1px;
-        transition: 0s; }
-      .menu-top ul li .sand_button {
-        display: block; } }
+        border-bottom: 2px solid #80542F;
+        text-align: center; }
+        .menu-top ul li a {
+          display: block;
+          width: 100%;
+          height: 100%;
+          padding: 5px 1px;
+          transition: 0s; } }
 
 .menu-top .submenu {
   position: absolute;
@@ -162,6 +172,33 @@ main {
 
 .active {
   border: 0.5px solid #80542F; }
+
+.mobile-menu-toggle {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  position: absolute;
+  top: 2px;
+  left: 2px; }
+  @media screen and (min-width: 526px) {
+    .mobile-menu-toggle {
+      display: none; } }
+  .mobile-menu-toggle span,
+  .mobile-menu-toggle span::before,
+  .mobile-menu-toggle span::after {
+    content: '';
+    display: block;
+    height: 3px;
+    background-color: #80542F;
+    position: relative; }
+  .mobile-menu-toggle span {
+    top: 10px; }
+  .mobile-menu-toggle span::before {
+    top: 10px; }
+  .mobile-menu-toggle span::after {
+    top: 17px; }
 
 footer {
   display: flex;
@@ -282,6 +319,11 @@ label.label {
   cursor: pointer;
   width: 250px;
   height: 60px; }
+  @media screen and (max-width: 525px) {
+    .tobadeye {
+      position: absolute;
+      top: 2px;
+      right: 2px; } }
 
 .badeye {
   display: none;
